--- a/readerbench/export/jacoco/test/html/i5.las2peer.services.readerbenchService/IndiceDescription.java.html
+++ b/readerbench/export/jacoco/test/html/i5.las2peer.services.readerbenchService/IndiceDescription.java.html
@@ -17,31 +17,31 @@ public class IndiceDescription {
 <span class="nc" id="L17">	public IndiceDescription() {</span>
 		// TODO Auto-generated constructor stub
 <span class="nc" id="L19">		this.indices.put(&quot;AvgDocWdEntropy&quot;, &quot;Vielfalt der Konzepte&quot;);</span>
-<span class="nc" id="L20">		this.indices.put(&quot;AvgWordWdLen&quot;, &quot;durchschnittlichen Länge aller Wörter&quot;);</span>
-<span class="nc" id="L21">		this.indices.put(&quot;AvgDocAdjCoh_DOC&quot;, &quot;Kohäsion zwischen Absätzen, basierend auf word2vec&quot;);</span>
-<span class="nc" id="L22">		this.indices.put(&quot;AvgBlockNoSent&quot;, &quot;durchschnittlichen Anzahl von Sätzen pro Absatz&quot;);</span>
-<span class="nc" id="L23">		this.indices.put(&quot;AvgBlockNoWd&quot;, &quot;durchschnittlichen Anzahl von Wörtern pro Absatz&quot;);</span>
+<span class="nc" id="L20">		this.indices.put(&quot;AvgWordWdLen&quot;, &quot;durchschnittlichen LÃ¤nge aller WÃ¶rter&quot;);</span>
+<span class="nc" id="L21">		this.indices.put(&quot;AvgDocAdjCoh_DOC&quot;, &quot;KohÃ¤sion zwischen AbsÃ¤tzen, basierend auf word2vec&quot;);</span>
+<span class="nc" id="L22">		this.indices.put(&quot;AvgBlockNoSent&quot;, &quot;durchschnittlichen Anzahl von SÃ¤tzen pro Absatz&quot;);</span>
+<span class="nc" id="L23">		this.indices.put(&quot;AvgBlockNoWd&quot;, &quot;durchschnittlichen Anzahl von WÃ¶rtern pro Absatz&quot;);</span>
 <span class="nc" id="L24">		this.indices.put(&quot;AvgBlockPOSMain_noun&quot;, &quot;durchschnittlichen Anzahl von Substantiven pro Absatz&quot;);</span>
 <span class="nc" id="L25">		this.indices.put(&quot;AvgBlockPOSMain_verb&quot;, &quot;durchschnittlichen Anzahl von Verben pro Absatz&quot;);</span>
 <span class="nc" id="L26">		this.indices.put(&quot;AvgBlockPOSMain_adv&quot;, &quot;durchschnittlichen Anzahl von Adverbien pro Absatz&quot;);</span>
 <span class="nc" id="L27">		this.indices.put(&quot;AvgBlockPOSMain_adj&quot;, &quot;durchschnittlichen Anzahl von Adjektiven pro Absatz&quot;);</span>
-<span class="nc" id="L28">		this.indices.put(&quot;AvgSentNoWd&quot;, &quot;durchschnittlichen Anzahl von Wörtern pro Satz&quot;);</span>
+<span class="nc" id="L28">		this.indices.put(&quot;AvgSentNoWd&quot;, &quot;durchschnittlichen Anzahl von WÃ¶rtern pro Satz&quot;);</span>
 <span class="nc" id="L29">		this.indices.put(&quot;AvgBlockIntraCoh_BLOCK&quot;, &quot;Intra-Absatz-Zusammenhalt, basierend auf word2vec&quot;);</span>
 <span class="nc" id="L30">		this.indices.put(&quot;AvgSentPOSMain_noun&quot;, &quot;durchschnittlichen Anzahl von Substantiven pro Satz&quot;);</span>
 <span class="nc" id="L31">		this.indices.put(&quot;AvgSentPOSMain_verb&quot;, &quot;durchschnittlichen Anzahl von Verben pro Satz&quot;);</span>
 <span class="nc" id="L32">		this.indices.put(&quot;AvgSentPOSMain_adv&quot;, &quot;durchschnittlichen Anzahl von Adverbien pro Satz&quot;);</span>
 <span class="nc" id="L33">		this.indices.put(&quot;AvgSentPOSMain_adj&quot;, &quot;durchschnittlichen Anzahl von Adjektiven pro Satz&quot;);</span>
-<span class="nc" id="L34">		this.indices.put(&quot;AvgSentRepetitions&quot;, &quot;Wiederholung von Begriffen in Sätzen&quot;);</span>
+<span class="nc" id="L34">		this.indices.put(&quot;AvgSentRepetitions&quot;, &quot;Wiederholung von Begriffen in SÃ¤tzen&quot;);</span>
 <span class="nc" id="L35">		this.indices.put(&quot;AvgSentNoPunct&quot;, &quot;durchschnittlichen Anzahl von Satzzeichen auf Satzebene&quot;);</span>
 <span class="nc" id="L36">		this.indices.put(&quot;AvgBlockNoPunct&quot;, &quot;durchschnittlichen Anzahl von Satzzeichen auf Absatzebene&quot;);</span>
 <span class="nc" id="L37">		this.indices.put(&quot;AvgSentNoCommas&quot;, &quot;durchschnittlichen Anzahl von Kommas auf Satzebene&quot;);</span>
 <span class="nc" id="L38">		this.indices.put(&quot;AvgBlockNoCommas&quot;, &quot;durchschnittlichen Anzahl von Kommas auf Absatzebene&quot;);</span>
-<span class="nc" id="L39">		this.indices.put(&quot;PC1&quot;, &quot;komplexität der Koncepte&quot;);</span>
+<span class="nc" id="L39">		this.indices.put(&quot;PC1&quot;, &quot;komplexitÃ¤t der Koncepte&quot;);</span>
 <span class="nc" id="L40">		this.indices.put(&quot;PC2&quot;, &quot;Entropie der Konzepte&quot;);</span>
-<span class="nc" id="L41">		this.indices.put(&quot;PC3&quot;, &quot;Zusammenhalt/KohÃ¤sion der Absätzen&quot;);</span>
-<span class="nc" id="L42">		this.indices.put(&quot;AvgBlockNoSent&quot;, &quot;Anzahl der Sätze&quot;);</span>
+<span class="nc" id="L41">		this.indices.put(&quot;PC3&quot;, &quot;Zusammenhalt/KohÃ¤sion der AbsÃ¤tzen&quot;);</span>
+<span class="nc" id="L42">		this.indices.put(&quot;AvgBlockNoSent&quot;, &quot;Anzahl der SÃ¤tze&quot;);</span>
 <span class="nc" id="L43">		this.indices.put(&quot;AvgBlockIntraCoh_BLOCK&quot;, &quot;Zusammenhalt/KohÃ¤sion zwischen SÃ¤tzen&quot;);</span>
-<span class="nc" id="L44">		this.indices.put(&quot;AvgBlockNoWd&quot;, &quot;Anzahl der Wörter&quot;);</span>
+<span class="nc" id="L44">		this.indices.put(&quot;AvgBlockNoWd&quot;, &quot;Anzahl der WÃ¶rter&quot;);</span>
 <span class="nc" id="L45">		this.indices.put(&quot;AvgBlockPOSMain_adv&quot;, &quot;Anzahl der Adverbien&quot;);</span>
 <span class="nc" id="L46">		this.indices.put(&quot;AvgBlockPOSMain_adj&quot;, &quot;Anzahl der Adjektive&quot;);</span>
 <span class="nc" id="L47">		this.indices.put(&quot;AvgBlockPOSMain_noun&quot;, &quot;Anzahl der Substantive&quot;);</span>
