--- a/readerbench/export/jacoco/test/html/i5.las2peer.services.readerbenchService.AssessmentContent/NLUAssessment.java.html
+++ b/readerbench/export/jacoco/test/html/i5.las2peer.services.readerbenchService.AssessmentContent/NLUAssessment.java.html
@@ -9,8 +9,8 @@ public class NLUAssessment extends Assessment {
 	private ArrayList&lt;String&gt; hints;
 	private String type;
 	public NLUAssessment(String topicName,String topicId, String quitIntent, ArrayList&lt;String&gt; questions, ArrayList&lt;String&gt; intents, ArrayList&lt;String&gt; hints,
-	 String helpIntent, String type, ArrayList&lt;String&gt; textref, ArrayList&lt;Double&gt; numberOfPoints, String modelType,  ArrayList&lt;Double&gt; similarityScore, ArrayList&lt;String&gt; textlevel) {
-<span class="nc" id="L13">		super(topicName, topicId, quitIntent, questions, type, textref, numberOfPoints, modelType, similarityScore, textlevel );</span>
+	 String helpIntent, String type, ArrayList&lt;String&gt; textref, ArrayList&lt;Double&gt; numberOfPoints, String modelType,  ArrayList&lt;Double&gt; similarityScore, ArrayList&lt;String&gt; textlevel, ArrayList&lt;String&gt; answers) {
+<span class="nc" id="L13">		super(topicName, topicId, quitIntent, questions, type, textref, numberOfPoints, modelType, similarityScore, textlevel, answers);</span>
 <span class="nc" id="L14">		this.helpIntent = helpIntent;</span>
 <span class="nc" id="L15">		this.intents = intents;</span>
 <span class="nc" id="L16">		this.hints = hints;</span>
@@ -29,4 +29,5 @@ public class NLUAssessment extends Assessment {
 	}
 	
 }
+	
 </pre><div class="footer"><span class="right">Created with <a href="http://www.jacoco.org/jacoco">JaCoCo</a> 0.8.6.202009150832</span></div></body></html>
