--- a/readerbench/export/jacoco/test/html/i5.las2peer.services.readerbenchService.AssessmentContent/Assessment.java.html
+++ b/readerbench/export/jacoco/test/html/i5.las2peer.services.readerbenchService.AssessmentContent/Assessment.java.html
@@ -17,130 +17,144 @@ public abstract class Assessment {
 	private String modelType;
 	private String topicId;
 	private ArrayList&lt;String&gt; answers;
-	
-<span class="nc" id="L21">	public Assessment(String quitIntent, ArrayList&lt;String&gt; questions) {</span>
-<span class="nc" id="L22">		this.quitIntent = quitIntent;</span>
-<span class="nc" id="L23">		this.questions = questions;</span>
-<span class="nc" id="L24">		this.marks = 0;</span>
-<span class="nc" id="L25">		this.currentQuestion = 0;</span>
-<span class="nc" id="L26">		this.currentWrongQuestions = &quot;&quot;;</span>
-<span class="nc" id="L27">	}</span>
+	private ArrayList&lt;String&gt; refComplexity;
+	private ArrayList&lt;String&gt; feedbackText;
+
+<span class="nc" id="L23">	public Assessment(String quitIntent, ArrayList&lt;String&gt; questions) {</span>
+<span class="nc" id="L24">		this.quitIntent = quitIntent;</span>
+<span class="nc" id="L25">		this.questions = questions;</span>
+<span class="nc" id="L26">		this.marks = 0;</span>
+<span class="nc" id="L27">		this.currentQuestion = 0;</span>
+<span class="nc" id="L28">		this.currentWrongQuestions = &quot;&quot;;</span>
+<span class="nc" id="L29">	}</span>
 	public Assessment(String topicName, String topicId, String quitIntent, ArrayList&lt;String&gt; questions, String type, ArrayList&lt;String&gt; textrefref,  ArrayList&lt;Double&gt; numberOfPoints, 
-<span class="nc" id="L29">	String modelType, ArrayList&lt;Double&gt; similarityScore, ArrayList&lt;String&gt; textlevel, ArrayList&lt;String&gt; answers) {</span>
-<span class="nc" id="L30">		this.topicName = topicName;</span>
-<span class="nc" id="L31">		this.quitIntent = quitIntent;</span>
-<span class="nc" id="L32">		this.questions = questions;</span>
-<span class="nc" id="L33">		this.marks = 0;</span>
-<span class="nc" id="L34">		this.currentQuestion = 0;</span>
-<span class="nc" id="L35">		this.currentWrongQuestions = &quot;&quot;;</span>
-<span class="nc" id="L36">		this.similarityScore = similarityScore;</span>
-<span class="nc" id="L37">		this.textlevel = textlevel;</span>
-<span class="nc" id="L38">		this.textReference = textrefref;</span>
-<span class="nc" id="L39">		this.type = type;</span>
-<span class="nc" id="L40">		this.numberOfPoints =numberOfPoints;</span>
-<span class="nc" id="L41">		this.modelType = modelType;</span>
-<span class="nc" id="L42">		this.topicId = topicId;</span>
-<span class="nc" id="L43">		this.answers = answers;</span>
-<span class="nc" id="L44">	}</span>
+<span class="nc" id="L31">	String modelType, ArrayList&lt;Double&gt; similarityScore, ArrayList&lt;String&gt; textlevel, ArrayList&lt;String&gt; refComplexity, ArrayList&lt;String&gt; answers, ArrayList&lt;String&gt; feedbackText) {</span>
+<span class="nc" id="L32">		this.topicName = topicName;</span>
+<span class="nc" id="L33">		this.quitIntent = quitIntent;</span>
+<span class="nc" id="L34">		this.questions = questions;</span>
+<span class="nc" id="L35">		this.marks = 0;</span>
+<span class="nc" id="L36">		this.currentQuestion = 0;</span>
+<span class="nc" id="L37">		this.currentWrongQuestions = &quot;&quot;;</span>
+<span class="nc" id="L38">		this.similarityScore = similarityScore;</span>
+<span class="nc" id="L39">		this.textlevel = textlevel;</span>
+<span class="nc" id="L40">		this.textReference = textrefref;</span>
+<span class="nc" id="L41">		this.type = type;</span>
+<span class="nc" id="L42">		this.numberOfPoints =numberOfPoints;</span>
+<span class="nc" id="L43">		this.modelType = modelType;</span>
+<span class="nc" id="L44">		this.topicId = topicId;</span>
+<span class="nc" id="L45">		this.answers = answers;</span>
+<span class="nc" id="L46">		this.refComplexity = refComplexity;</span>
+<span class="nc" id="L47">		this.feedbackText = feedbackText;</span>
+<span class="nc" id="L48">	}</span>
 
 	
 	public String getType(){
-<span class="nc" id="L48">		return this.type;</span>
+<span class="nc" id="L52">		return this.type;</span>
 	}
 
 	public String gettopicId(){
-<span class="nc" id="L52">		return this.topicId;</span>
+<span class="nc" id="L56">		return this.topicId;</span>
 	}
 
 	public String getTopicName(){
-<span class="nc" id="L56">		return this.topicName;</span>
+<span class="nc" id="L60">		return this.topicName;</span>
 	}
 
 	public String getQuitIntent() {
-<span class="nc" id="L60">		return this.quitIntent;</span>
+<span class="nc" id="L64">		return this.quitIntent;</span>
 	}
 	
 	public double getMarks() {
-<span class="nc" id="L64">		return this.marks; </span>
+<span class="nc" id="L68">		return this.marks; </span>
 	}
 	
 	public void incrementMark(double value) {
-<span class="nc" id="L68">    	this.marks += (Math.round(value*100.0)/100.0);</span>
-<span class="nc" id="L69">    } </span>
+<span class="nc" id="L72">    	this.marks += (Math.round(value*100.0)/100.0);</span>
+<span class="nc" id="L73">    } </span>
 	
 	public int getCurrentQuestionNumber() {
-<span class="nc" id="L72">		return this.currentQuestion;</span>
+<span class="nc" id="L76">		return this.currentQuestion;</span>
 	}
 	
 	public void incrementCurrentQuestionNumber() {
-<span class="nc" id="L76">		this.currentQuestion++ ;</span>
-<span class="nc" id="L77">	}</span>
+<span class="nc" id="L80">		this.currentQuestion++ ;</span>
+<span class="nc" id="L81">	}</span>
 	
 	public int getAssessmentSize() {
-<span class="nc" id="L80">		return this.questions.size();</span>
+<span class="nc" id="L84">		return this.questions.size();</span>
 	} 
 	
 	public String getWrongQuestions() {
-<span class="nc" id="L84">		return this.currentWrongQuestions;	</span>
+<span class="nc" id="L88">		return this.currentWrongQuestions;	</span>
 	}
 	
 	public void addWrongQuestion(){
-<span class="nc" id="L88">	    	this.currentWrongQuestions += questions.get(getCurrentQuestionNumber()) + &quot;\n&quot; ;</span>
-<span class="nc" id="L89">	} </span>
+<span class="nc" id="L92">	    	this.currentWrongQuestions += questions.get(getCurrentQuestionNumber()) + &quot;\n&quot; ;</span>
+<span class="nc" id="L93">	} </span>
 	
 	public String getCurrentQuestion() {
-<span class="nc" id="L92">		return this.questions.get(this.getCurrentQuestionNumber());</span>
+<span class="nc" id="L96">		return this.questions.get(this.getCurrentQuestionNumber());</span>
 	}
 	public String getQuestionByNumber(int number) {
-<span class="nc" id="L95">		return this.questions.get(number);</span>
+<span class="nc" id="L99">		return this.questions.get(number);</span>
 	}
 	public String getAnswerByNumber(int number) {
-<span class="nc" id="L98">		return this.answers.get(number);</span>
+<span class="nc" id="L102">		return this.answers.get(number);</span>
+	}
+	public String getrefComplexityByNumber(int number) {
+<span class="nc" id="L105">		return this.refComplexity.get(number);</span>
 	}
 	public String getCurrentAnswer() {
-<span class="nc" id="L101">		return this.questions.get(this.getCurrentQuestionNumber());</span>
+<span class="nc" id="L108">		return this.questions.get(this.getCurrentQuestionNumber());</span>
 	}
 
 	public void setCurrentAnswer(String answer) {
-<span class="nc" id="L105">		this.answers.set(this.getCurrentQuestionNumber(), answer);</span>
-<span class="nc" id="L106">	}</span>
+<span class="nc" id="L112">		this.answers.set(this.getCurrentQuestionNumber(), answer);</span>
+<span class="nc" id="L113">	}</span>
 	public Double getCurrentNumberOfPoints() {
-<span class="nc" id="L108">		return this.numberOfPoints.get(this.getCurrentQuestionNumber());</span>
+<span class="nc" id="L115">		return this.numberOfPoints.get(this.getCurrentQuestionNumber());</span>
 	}
 
 	public void setLevel(String level){
-<span class="nc" id="L112">		this.textlevel.set(this.getCurrentQuestionNumber(), level);</span>
-<span class="nc" id="L113">	}</span>
+<span class="nc" id="L119">		this.textlevel.set(this.getCurrentQuestionNumber(), level);</span>
+<span class="nc" id="L120">	}</span>
+
+	public String getFeedbackText(int i){
+<span class="nc" id="L123">		return this.feedbackText.get(i);</span>
+	}
+	public void setFeedbackText(String feedback){
+<span class="nc" id="L126">		this.feedbackText.set(this.getCurrentQuestionNumber(), feedback);</span>
+<span class="nc" id="L127">	}</span>
 	public void setLevelByNumber(int number, String level){
-<span class="nc" id="L115">		this.textlevel.set(number, level);</span>
-<span class="nc" id="L116">	}</span>
+<span class="nc" id="L129">		this.textlevel.set(number, level);</span>
+<span class="nc" id="L130">	}</span>
 
 	public void setSimilarity(double value){
-<span class="nc" id="L119">		System.out.println(&quot;This CurrentQuestionNumber is...........&quot;+ this.getCurrentQuestionNumber());</span>
-<span class="nc" id="L120">		System.out.println(&quot;This NumberOfPoints is...........&quot;+ this.getCurrentQuestionNumber());</span>
-<span class="nc" id="L121">		this.similarityScore.set(this.getCurrentQuestionNumber(), value);</span>
-<span class="nc" id="L122">	}</span>
+<span class="nc" id="L133">		System.out.println(&quot;This CurrentQuestionNumber is...........&quot;+ this.getCurrentQuestionNumber());</span>
+<span class="nc" id="L134">		System.out.println(&quot;This NumberOfPoints is...........&quot;+ this.getCurrentQuestionNumber());</span>
+<span class="nc" id="L135">		this.similarityScore.set(this.getCurrentQuestionNumber(), value);</span>
+<span class="nc" id="L136">	}</span>
 	public void setSimilarityByNumber(int number,double value){
-<span class="nc" id="L124">		this.similarityScore.set(number, value);</span>
-<span class="nc" id="L125">	}</span>
+<span class="nc" id="L138">		this.similarityScore.set(number, value);</span>
+<span class="nc" id="L139">	}</span>
 
 
 	
 
 	public ArrayList&lt;Double&gt; getSimilarityScoreList(){
-<span class="nc" id="L131">		return this.similarityScore;</span>
+<span class="nc" id="L145">		return this.similarityScore;</span>
 	}
-	public ArrayList&lt;String&gt; getLevelList(){
-<span class="nc" id="L134">		return this.textlevel;</span>
+	public String getLevelList(int i){
+<span class="nc" id="L148">		return this.textlevel.get(i);</span>
 	}
 	public String gettextReference(){
-<span class="nc" id="L137">		return this.textReference.get(this.getCurrentQuestionNumber());</span>
+<span class="nc" id="L151">		return this.textReference.get(this.getCurrentQuestionNumber());</span>
 	}
 	public String gettextReferenceByNumber(int number){
-<span class="nc" id="L140">		return this.textReference.get(number);</span>
+<span class="nc" id="L154">		return this.textReference.get(number);</span>
 	}
 	public String getModelType(){
-<span class="nc" id="L143">		return this.modelType;</span>
+<span class="nc" id="L157">		return this.modelType;</span>
 	}
 	
 	
