--- a/readerbench/export/jacoco/test/html/i5.las2peer.services.readerbenchService.AssessmentContent/NLUAssessment.java.html
+++ b/readerbench/export/jacoco/test/html/i5.las2peer.services.readerbenchService.AssessmentContent/NLUAssessment.java.html
@@ -9,23 +9,24 @@ public class NLUAssessment extends Assessment {
 	private ArrayList&lt;String&gt; hints;
 	private String type;
 	public NLUAssessment(String topicName,String topicId, String quitIntent, ArrayList&lt;String&gt; questions, ArrayList&lt;String&gt; intents, ArrayList&lt;String&gt; hints,
-	 String helpIntent, String type, ArrayList&lt;String&gt; textref, ArrayList&lt;Double&gt; numberOfPoints, String modelType,  ArrayList&lt;Double&gt; similarityScore, ArrayList&lt;String&gt; textlevel, ArrayList&lt;String&gt; answers) {
-<span class="nc" id="L13">		super(topicName, topicId, quitIntent, questions, type, textref, numberOfPoints, modelType, similarityScore, textlevel, answers);</span>
-<span class="nc" id="L14">		this.helpIntent = helpIntent;</span>
-<span class="nc" id="L15">		this.intents = intents;</span>
-<span class="nc" id="L16">		this.hints = hints;</span>
-<span class="nc" id="L17">	}</span>
+	 String helpIntent, String type, ArrayList&lt;String&gt; textref, ArrayList&lt;Double&gt; numberOfPoints, String modelType,  ArrayList&lt;Double&gt; similarityScore, ArrayList&lt;String&gt; textlevel,
+	 ArrayList&lt;String&gt; refComplexity, ArrayList&lt;String&gt; answers, ArrayList&lt;String&gt; feedbackText) {
+<span class="nc" id="L14">		super(topicName, topicId, quitIntent, questions, type, textref, numberOfPoints, modelType, similarityScore, textlevel, refComplexity, answers, feedbackText);</span>
+<span class="nc" id="L15">		this.helpIntent = helpIntent;</span>
+<span class="nc" id="L16">		this.intents = intents;</span>
+<span class="nc" id="L17">		this.hints = hints;</span>
+<span class="nc" id="L18">	}</span>
 	
 	public String getCorrectAnswerIntent() {
-<span class="nc" id="L20">		return this.intents.get(this.getCurrentQuestionNumber());</span>
+<span class="nc" id="L21">		return this.intents.get(this.getCurrentQuestionNumber());</span>
 	}
 	
 	public String getQuestionHint() {
-<span class="nc" id="L24">		return this.hints.get(this.getCurrentQuestionNumber());</span>
+<span class="nc" id="L25">		return this.hints.get(this.getCurrentQuestionNumber());</span>
 	}
 	
 	public String getHelpIntent() {
-<span class="nc" id="L28">		return this.helpIntent;</span>
+<span class="nc" id="L29">		return this.helpIntent;</span>
 	}
 	
 }
