--- a/readerbench/export/jacoco/test/html/i5.las2peer.services.readerbenchService.model/MessageInfo.java.html
+++ b/readerbench/export/jacoco/test/html/i5.las2peer.services.readerbenchService.model/MessageInfo.java.html
@@ -1,53 +1,53 @@
-<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="de"><head><meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/><link rel="stylesheet" href="../jacoco-resources/report.css" type="text/css"/><link rel="shortcut icon" href="../jacoco-resources/report.gif" type="image/gif"/><title>MessageInfo.java</title><link rel="stylesheet" href="../jacoco-resources/prettify.css" type="text/css"/><script type="text/javascript" src="../jacoco-resources/prettify.js"></script></head><body onload="window['PR_TAB_WIDTH']=4;prettyPrint()"><div class="breadcrumb" id="breadcrumb"><span class="info"><a href="../jacoco-sessions.html" class="el_session">Sessions</a></span><a href="../index.html" class="el_report">readerbench</a> &gt; <a href="index.source.html" class="el_package">i5.las2peer.services.readerbenchService.model</a> &gt; <span class="el_source">MessageInfo.java</span></div><h1>MessageInfo.java</h1><pre class="source lang-java linenums">/**
- * 
- */
-package i5.las2peer.services.readerbenchService.model;
+<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="de"><head><meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/><link rel="stylesheet" href="../jacoco-resources/report.css" type="text/css"/><link rel="shortcut icon" href="../jacoco-resources/report.gif" type="image/gif"/><title>MessageInfo.java</title><link rel="stylesheet" href="../jacoco-resources/prettify.css" type="text/css"/><script type="text/javascript" src="../jacoco-resources/prettify.js"></script></head><body onload="window['PR_TAB_WIDTH']=4;prettyPrint()"><div class="breadcrumb" id="breadcrumb"><span class="info"><a href="../jacoco-sessions.html" class="el_session">Sessions</a></span><a href="../index.html" class="el_report">readerbench</a> &gt; <a href="index.source.html" class="el_package">i5.las2peer.services.readerbenchService.model</a> &gt; <span class="el_source">MessageInfo.java</span></div><h1>MessageInfo.java</h1><pre class="source lang-java linenums">package i5.las2peer.services.readerbenchService.model;
+import i5.las2peer.services.readerbenchService.chat.*;
+import i5.las2peer.services.readerbenchService.nlu.*;
 
 /**
  * @author Karl Zeufack
  *
  */
 public class MessageInfo {
-	String msg;
+	ChatMessage message;
+	Intent intent;
+	String triggeredFunctionId;
 	String botName;
-	String channel;
-	String text;
-	String intent;
-	String email;
-	String category;
-	boolean contextOn;
-	public MessageInfo(String msg, String botName,	String channel,	
-			String text, String intent, String email, String category, boolean contextOn)
-<span class="nc" id="L21">	{</span>
-<span class="nc" id="L22">		this.msg = msg;</span>
-<span class="nc" id="L23">		this.botName = botName;</span>
-<span class="nc" id="L24">		this.channel= channel;</span>
-<span class="nc" id="L25">		this.text = text;</span>
-<span class="nc" id="L26">		this.intent = intent;</span>
-<span class="nc" id="L27">		this.email = email;</span>
-<span class="nc" id="L28">		this.category = category;</span>
-<span class="nc" id="L29">		this.contextOn = contextOn;</span>
-<span class="nc" id="L30">	}</span>
-	public String msg() {
-<span class="nc" id="L32">		return this.msg;</span>
+	String serviceAlias;
+	boolean contextWithService;
+
+	public MessageInfo(ChatMessage message,	Intent intent,
+			String triggeredFunctionId, String botName,
+			String serviceAlias, boolean contextWithService)
+<span class="nc" id="L20">	{</span>
+<span class="nc" id="L21">		this.message = message;</span>
+<span class="nc" id="L22">		this.intent = intent;</span>
+<span class="nc" id="L23">		this.triggeredFunctionId = triggeredFunctionId;</span>
+<span class="nc" id="L24">		this.botName = botName;</span>
+<span class="nc" id="L25">		this.serviceAlias = serviceAlias;</span>
+<span class="nc" id="L26">		this.contextWithService = contextWithService;</span>
+<span class="nc" id="L27">	}</span>
+
+	public ChatMessage getMessage() {
+<span class="nc" id="L30">		return this.message;</span>
 	}
-	public String botName() {
-<span class="nc" id="L35">		return this.botName;</span>
+
+	public Intent getIntent() {
+<span class="nc" id="L34">		return this.intent;</span>
 	}
-	public String channel() {
-<span class="nc" id="L38">		return this.channel;</span>
+
+	public String getTriggeredFunctionId() {
+<span class="nc" id="L38">		return this.triggeredFunctionId;</span>
 	}
-	public String text() {
-<span class="nc" id="L41">		return this.text;</span>
+
+	public String getBotName() {
+<span class="nc" id="L42">		return this.botName;</span>
 	}
-	public String intent() {
-<span class="nc" id="L44">		return this.intent;</span>
+
+	public String getServiceAlias() {
+<span class="nc" id="L46">		return this.serviceAlias;</span>
 	}
-	public String email() {
-<span class="nc" id="L47">		return this.email;</span>
-	}
-	public boolean contextOn() {
-<span class="nc" id="L50">		return this.contextOn;</span>
+	
+	public boolean contextActive() {
+<span class="nc" id="L50">		return this.contextWithService;</span>
 	}
 	
 	
